src/test/ui/object-safety/object-safety-generics.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:14:1
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters
=======
LL |     fn bar<T>(&self, t: T);
   |        --- method `bar` has generic type parameters
...
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-generics.rs:19:1
   |
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
LL | fn make_bar_explicit<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: method `bar` has generic type parameters
=======
LL |     fn bar<T>(&self, t: T);
   |        --- method `bar` has generic type parameters
...
LL | fn make_bar_explicit<T:Bar>(t: &T) -> &dyn Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` cannot be made into an object
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
